# Sproutcast

./: .env.example  .gitignore  .instructions  ARCHITECTURE_REFACTOR.md  CI-CD-DEPLOYMENT.md  Dockerfile  PlantCV_Enhancement_Plan.md  README.md  build-local.ps1  config_template.json  data_organization_plan.md  data_organization_plan_v2.md  database_integration.py  deploy.ps1  deploy.sh  docker-compose.prod.yml  docker-compose.standalone.yml  docker-compose.yml  migrate_data.py  start-docker.ps1  start-docker.sh  test-local.ps1
.github/instructions/: PlantVisionInstructions.instructions.md
.github/workflows/: ci-cd.yml  docker-build-push.yml  docker-hub.yml
ai/: .dockerignore  Dockerfile  main.py  requirements.txt
cpp/: .dockerignore  CMakeLists.txt  Dockerfile  test.cpp
cpp/include/: ai_inference.hpp  change_detector.hpp  color_analysis.hpp  config_manager.hpp  leaf_area.hpp  ml_classification.hpp  morphology_analysis.hpp  mqtt_client.hpp  vision_processor.hpp
cpp/src/: ai_inference.cpp  change_detector.cpp  config_manager.cpp  leaf_area.cpp  main.cpp  morphology_analysis.cpp  mqtt_client.cpp  vision_processor.cpp
data/: ai_metrics.json  config.json
docs/: ARCHITECTURE.md  CNAME  CONSOLIDATION_SUMMARY.md  DATA_ORGANIZATION.md  ENHANCEMENT_ROADMAP.md  QUICKSTART.md  index.html
mqtt/: mosquitto.conf
mqtt/data/: mosquitto.db
web/: .dockerignore  Dockerfile  main.py  main_unified.py  requirements.txt
web/templates/: navigation.html
web/tests/: test_api.py
